service-testing/dep1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-dep
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app


  template:
    metadata:
      labels:
        app: notes-app

    spec:
      containers:
        - name: notes-app
          image: memorydrive/employee-management
          ports:
            - containerPort: 8000
