service-testing/dep2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  namespace: service-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx


  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: coolgourav147/nginx-custom
          ports:
            - containerPort: 80
