service-testing/svc1.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-svc
  namespace: service-demo
spec:
  selector:
    app: notes-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
