service-testing/svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-svc
  namespace: service-demo
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
