service-testing/new-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ng-ingress
  namespace: service-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: nginx-app-svc
            port:
              number: 80
      - path: /notes
        pathType: Prefix
        backend:
          service:
            name: notes-app-svc
            port:
              number: 8000
